# Sqlite3_partitioner

./: .gitignore  Cargo.toml  README.MD  README.md  notice.txt
.cargo/: config.toml
.github/workflows/: build_test.yml  jekyll.yml  release.yml
docs/: Gemfile  _config.yml  architecture.markdown  index.markdown  install.markdown  usage.markdown
docs/_posts/: 2024-03-20-welcome-to-jekyll.markdown
src/: lib.rs
src/.slask/: column.rs  db_util.rs
src/error/: mod.rs
src/shadow_tables/: bucket_table.rs  interface.rs  lookup_table.rs  mod.rs  operations.rs  root_table.rs  template_table.rs
src/shadow_tables/partition_interface/: partition.rs
src/types/: column_declaration.rs  mod.rs
src/types/column_declaration/: column.rs  columns.rs  expiration.rs  mod.rs  partition.rs
src/types/constraints/: conditions.rs  mod.rs  where_clauses.rs
src/utils/: mod.rs  parsing.rs  validation.rs
src/vtab_interface/: bucket_cursor.rs  mod.rs  vtab_cursor.rs  vtab_module.rs
src/vtab_interface/operations/: create.rs  delete.rs  insert.rs  mod.rs  update.rs
