[package]
name = "sqlite3-partitioner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "partitioner"
path = "src/lib.rs"
crate-type=["cdylib"]
exactname = {cdylib = "{}.dylib"}
[dependencies]
regex = "1.10.3"
sqlite3_ext = {version = "0.1.3"} 
chrono = { version = "0.4", features = ["unstable-locales"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
serde_derive = "1.0"
[dev-dependencies]
sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]} 
rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
