[package]
name = "sqlite3-partitioner"
version = "0.1.0-alpha"
edition = "2021"

[lib]
name = "partitioner"
path = "src/lib.rs"
crate-type=["cdylib"]
[dependencies]
regex = "1.10.3"
sqlite3_ext = {version = "0.1.3"} 
chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
sqlparser = {version = "0.44.0", features = ["serde"]}
[dev-dependencies]
sqlite3_ext = {version = "0.1.3", features = ["with_rusqlite"]} 
rusqlite = {version = "^0.27", features = ["column_decltype", "vtab"]}
cargo-llvm-cov = "0.6.7"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[build]
profiler = true
